--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -1,3 +1,19 @@
 * {
   box-sizing: border-box;
 }
+
+  
+.wrapper {
+  height: 100vh;
+  width: 100%;
+  display: block;
+  .chat-side {
+    width: 300px;
+    height:100vh;
+    background-color: #253141;
+  }
+  .chat-main {
+    background-color: #ffffff;
+    width : calc(100% - 300px);
+  }
+}
