--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -1,19 +1,43 @@
 * {
   box-sizing: border-box;
 }
-
   
 .wrapper {
   height: 100vh;
   width: 100%;
-  display: block;
-  .chat-side {
+  .side-bar {
     width: 300px;
     height:100vh;
-    background-color: #253141;
-  }
+    float:left;
+    background-color: #323841;
+    .header {
+      height: 100px;
+      width: 300px;
+    }
+    .groups {
+      background-color: #2f3e51;
+      height: calc(100vh - 100px);
+      width: 300px;
+    }
+    }
+    }
+  
   .chat-main {
     background-color: #ffffff;
     width : calc(100% - 300px);
+    float:left;
+    .main-header{
+      height: 100px;
+      
+    }
+    .messages {
+      background-color: #fafafa;
+      height: calc(100vh - 190px);
+      
+    }
+    .form {
+      background-color: #d2d2d2;
+      height: 90px;
+     
+    }
   }
-}
