--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -1,18 +1,45 @@
 * {
   box-sizing: border-box;
 }
+
   
 .wrapper {
+  display:flex;
   height: 100vh;
-  width: 100%;
   .side-bar {
     width: 300px;
-    height:100vh;
-    float:left;
     background-color: #323841;
     .header {
       height: 100px;
-      width: 300px;
+      display:flex;
+      align-items: center;
+      padding: 0 20px;
+      &__box {
+        display:flex;
+        justify-content: space-between;
+        width: 100%;
+        font-weight: bold;
+        font-size:16px;
+        &__name {
+          color:white; 
+          }
+        &__menu {
+          display:flex;
+          &__new-group {
+            .new-group__btn{
+              text-decoration: none;
+              color:white; 
+              margin-right: 5px;
+            }           
+          }
+        &__edit-user {
+          .edit-user__btn{
+            text-decoration: none;
+            color:white; 
+            }           
+          }
+        }
+      }
     }
     .groups {
       background-color: #2f3e51;
@@ -25,7 +52,6 @@
   .chat-main {
     background-color: #ffffff;
     width : calc(100% - 300px);
-    float:left;
     .main-header{
       height: 100px;
       
