--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -15,3 +15,16 @@
 
 
   .groups
+    .group
+      .group__name
+        test
+      .group__message
+        まだメッセージがありません
+      .group__name
+        test2
+      .group__message
+        まだメッセージがありません
+      .group__name
+        test3
+      .group__message
+        まだメッセージがありません
