--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,5 +1,15 @@
 .chat-main
   .main-header
+    .main-header__left-box
+      .main-header__left-box__current-group
+        test
+      %ul.main-header__left-box__member-list
+        Member : test
+        %li.main-header__left-box__member-list__member
+    %a{href: '#'}
+      .main-header__edit-btn
+        Edit
+
 
   .messages
   
