--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -103,6 +103,30 @@
     .messages {
       background-color: #fafafa;
       height: calc(100vh - 190px);
+      padding: 35px 40px;
+      .upper-message{
+        display: flex;
+        &__user-name {
+          color: #333333;
+          font-size: 16px;
+          padding-bottom: 12px;
+        }
+        &__date {
+          color: #999999;
+          font-size: 12px;
+          margin-left: 10px;
+
+        }
+      }
+      .lower-message {
+        &__content {
+          color: #434a54;
+          font-size: 14px;
+          padding-bottom: 46px;
+          
+
+        }
+      }
       
     }
     .form {
