--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -12,5 +12,23 @@
 
 
   .messages
+    .upper-message
+      .upper-message__user-name
+        test
+      .upper-message__date
+        2019/12/21(sat)17:11:03
+    .lower-message
+      %p.lower-message__content
+        まだ投稿できないよ
+    .upper-message
+      .upper-message__user-name
+        test
+      .upper-message__date
+        2019/12/21(sat)17:24:37
+    .lower-message
+      %p.lower-message__content
+        まだまだ投稿できないよ
+
+
   
   .form
