--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,14 +2,14 @@
   .header
     .header__box
       .header__box__name
-        test
+        =current_user.name
       %ul.header__box__menu
         %li.header__box__menu__new-group
           = link_to "#", class: "new-group__btn" do
             = icon('far', 'edit')
           
         %li.header__box__menu__edit-user
-          = link_to "#", class: "edit-user__btn" do
+          = link_to edit_user_path(current_user), class: "edit-user__btn" do
             = icon('fas', 'cog')         
 
 
