--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -124,41 +124,38 @@ $white-color: #ffffff;
       }
     }
     .form {
-      background-color: #d2d2d2;
+      background-color: #DDDDDD;
+      box-sizing: border-box;
       height: 90px;
-      padding: 20px 40px;
-      .input {
-        display: flex;
-        .form-message{
-          display: flex;
-          width: 100%;
-          position: relative;
-          .new-message {
-            height:50px;
-            width: 100%;
-            border-style: none;
-            padding: 0 40px 0 10px;
-          }
-          .form-image {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            cursor: pointer;
-            input {
-              display: none;
-            }
-          }
+      padding: 20px 50px 20px 40px;
+      &__message {
+        border: none;
+        float: left;
+        height: 50px;
+        width: calc(100% - 150px);
+      }
+      &__mask {
+        background-color: $white;
+        float: left;
+        height: 50px;
+        padding-right: 10px;
+        &__image {
+          font-size: 20px;
+          line-height: 50px;
         }
-          .send-btn {
-            width: 100px;
-            height: 50px;
-            line-height: 50px;
-            text-align: center;
-            background-color: #38aef0;
-            color: $white-color;
-            margin-left: 15px;  
-            text-decoration: none ;
-          }
+        .hidden {
+          display: none;
+        }
+      }
+      &__submit {
+        background-color: $light_blue;
+        border: none;
+        color: $white;
+        float: right;
+        font-size: 16px;
+        height: 50px;
+        margin-left: 15px;
+        padding: 0 30px;
       }
     }
   }
