--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -17,8 +17,8 @@
   .groups
     - current_user.groups.each do |group|
       .group
-        = link_to '#' ,class:"link" do
+        = link_to group_messages_path(group) ,class:"link" do
           .group__name
             = group.name
           .group__message
-            メッセージはまだありません。
+            = group.show_last_message
