自動更新機能実装

--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -13,7 +13,7 @@
 
   .messages
     - @messages.each do |message|
-      .message
+      .message{data: {message: {id: message.id}}}
         .upper-message
           .upper-message__user-name
             = message.user.name
