--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -5,7 +5,8 @@
         = @group.name
       %ul.main-header__left-box__member-list
         Member : 
-        = current_user.name
+        - @group.group_users.each do |group_user|
+          = group_user.user.name
         %li.main-header__left-box__member-list__member
     = link_to edit_group_path(@group), class:"main-header__edit-btn" do
       Edit
